LeftInfo and SwitchMenu added, some fix about responsive

--- a/app/css/extra.css
+++ b/app/css/extra.css
@@ -1,8 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100..900&family=Iceland&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Jost:ital,wght@0,100..900;1,100..900&family=Orbitron&family=Poppins:wght@400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
 
 .bigbold{
     font-family: "Big Shoulders Display", serif;
     font-optical-sizing: auto;
     font-weight: 700;
     font-style: normal;
+}
+
+.iceregular {
+    font-family: "Iceland", serif;
+    font-weight: 400;
+    letter-spacing: 0px;
+    font-style: normal;
+}
+
+.glow-effect {
+
+    border-radius: 8px; /* Köşe yuvarlatma (isteğe bağlı) */
+    box-shadow: 0 0 5px #10B981, 0 0 8px #10B981; /* Işıma efekti */
+
+    text-align: center;
+    color: white;
 }
